fix text not centering on buttons on IOS
fix text not centering on buttons on some IOS devices
update font's to be same throughout calculator

--- a/src/Components/Calculator/calculator.css
+++ b/src/Components/Calculator/calculator.css
@@ -23,16 +23,21 @@
   justify-content: flex-end;
   padding-right: 10px;
   box-sizing: border-box;
+  font-family: Arial;
   font-size: 2em;
   overflow: hidden;
+
 }
 
 .calculatorButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 5.1rem;
   width: 5.1rem;
+  font-family: Arial;
   font-size: 2.1rem;
   font-weight: bold;
-  text-align: center;
   background-color: #303030;
   color: #cfcfcf;
   border: none;
